--- a/src/pages/Propiedades.css
+++ b/src/pages/Propiedades.css
@@ -1,8 +1,8 @@
 .propiedades-body {
-    margin-top: 110px;
-  }
-  
-  /* ----------------- Body y contenedor ----------------- */
+  margin-top: 110px;
+}
+
+/* ----------------- Body y contenedor ----------------- */
 
 
 
@@ -179,11 +179,11 @@
 
 .mapa-propiedades-container {
   width: 100%;
-  max-height: 350px; /* alto compacto */
+  max-height: 350px;
+  /* alto compacto */
   border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   position: relative;
   background-color: #c82333;
   margin-bottom: 200px;
 }
-
